@@ -179,10 +179,15 @@ namespace Little_Registry_Cleaner
             // See if we have the current version
             if (Properties.Settings.Default.bOptionsAutoUpdate)
             {
-                string strVersion = "", strChangeLogURL = "", strDownloadURL = "", strReleaseDate = "";
-                if (UpdateDlg.FindUpdate(ref strVersion, ref strReleaseDate,ref strChangeLogURL, ref strDownloadURL))
-                    if (MessageBox.Show(this, "A newer version is available. Would you like to download it?", Application.ProductName, MessageBoxButtons.YesNo, MessageBoxIcon.Information) == DialogResult.Yes)
-                        Utils.LaunchURI(strDownloadURL);
+                // Only check if it has been >= 2 weeks since last check
+                TimeSpan ts = DateTime.Now - Properties.Settings.Default.dtLastStart;
+                if (ts.TotalDays >= 14)
+                {
+                    string strVersion = "", strChangeLogURL = "", strDownloadURL = "", strReleaseDate = "";
+                    if (UpdateDlg.FindUpdate(ref strVersion, ref strReleaseDate, ref strChangeLogURL, ref strDownloadURL))
+                        if (MessageBox.Show(this, "A newer version is available. Would you like to download it?", Application.ProductName, MessageBoxButtons.YesNo, MessageBoxIcon.Information) == DialogResult.Yes)
+                            Utils.LaunchURI(strDownloadURL);
+                }
             }
         }
 
