@@ -46,6 +46,9 @@
             <setting name="bOptionsRemMedia" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="dtLastStart" serializeAs="String">
+                <value />
+            </setting>
         </Little_Registry_Cleaner.Properties.Settings>
     </userSettings>
     <applicationSettings>
